trying to fix look on smaller screens

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -42,8 +42,9 @@
 
 @media screen and (min-width: 300px) and (max-width: 450px) {
   .book-list {
-    width: 200px;
+    width: 100px;
     padding: 10px;
+    margin-left: -5px;
   }
 
   .list {
@@ -61,6 +62,7 @@
   .book-list {
     width: 300px;
     padding: 10px;
+    margin-left: -5px;
   }
 
   .list {
